--- a/README
+++ b/README
@@ -18,7 +18,7 @@ Story (vague):
   sourced from its legendary cheese mines. However the mines are necessarily far
   from the village, the dense forest between the village and the mines being
   overrun with all manner of dangerous creatures. Due to the hazards of
-  transporting the cheese back to the village the local sorceror fashioned a
+  transporting the cheese back to the village the local sorcerer fashioned a
   huge golem out of (what else) cheese to help protect the cheese wagon during 
   its trips to and from the mines. Unfortunately something went wrong and the 
   golem turned on the villagers. It now mindlessly guards the cheese mines and
