added class choice text to readme

--- a/README
+++ b/README
@@ -58,3 +58,8 @@ Plan:
     Fix web console/build site
     Full color
     Polish
+    
+As a child you recall:
+Staring into a bubbling cauldron of fondue while muttering arcanely
+Bludgeoning rats and mice to death with huge wheels of cheese
+Sneaking into the village stores with a packet of crackers for a midnight snack    
